--- a/homework-01/pom.xml
+++ b/homework-01/pom.xml
@@ -20,6 +20,7 @@
         <checkstyle.version>10.11.0</checkstyle.version>
         <junit.version>5.10.0</junit.version>
         <mockito-core.version>5.4.0</mockito-core.version>
+        <mockito-junit-jupiter.version>4.8.1</mockito-junit-jupiter.version>
         <checkstyle.config.url>https://raw.githubusercontent.com/OtusTeam/Spring/master/checkstyle.xml
         </checkstyle.config.url>
     </properties>
@@ -45,6 +46,12 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito-junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
