Добавлены: 1. Тесты 2. Общий класс конфигурации приложения

--- a/homework-02/src/main/resources/app-config.properties
+++ b/homework-02/src/main/resources/app-config.properties
@@ -1,5 +1,5 @@
-io.input.stream=#{T(java.lang.System).in}
-io.output.stream=#{T(java.lang.System).out}
-file.resource.path=/questions.csv
-total.test.number=10
-passing.score.number=7
+input.stream=#{T(java.lang.System).in}
+output.stream=#{T(java.lang.System).out}
+resource.path=/questions.csv
+test.total=10
+test.passing=7
