--- a/homework-03/pom.xml
+++ b/homework-03/pom.xml
@@ -14,6 +14,7 @@
 	<name>homework-03</name>
 	<description>Testing app</description>
 	<properties>
+		<start.class>ru.otus.homework.TestingApplication</start.class>
 		<java.version>17</java.version>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
@@ -52,10 +53,21 @@
 	</dependencies>
 
 	<build>
+		<outputDirectory>target</outputDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>${start.class}</mainClass>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
