--- a/homework-06/src/main/resources/application.yaml
+++ b/homework-06/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
-    show-sql: false
+    show-sql: true
   sql:
     init:
       mode: always
