--- a/homework-08/pom.xml
+++ b/homework-08/pom.xml
@@ -51,12 +51,6 @@
     </dependency>
 
     <dependency>
-      <groupId>de.flapdoodle.embed</groupId>
-      <artifactId>de.flapdoodle.embed.mongo</artifactId>
-      <version>${flapdoodle.version}</version>
-    </dependency>
-
-    <dependency>
       <groupId>org.springframework.shell</groupId>
       <artifactId>spring-shell-starter</artifactId>
       <version>${spring-shell.version}</version>
@@ -81,6 +75,19 @@
     <dependency>
       <groupId>com.github.cloudyrock.mongock</groupId>
       <artifactId>mongodb-springdata-v3-driver</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>de.flapdoodle.embed</groupId>
+      <artifactId>de.flapdoodle.embed.mongo</artifactId>
+      <version>${flapdoodle.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>de.flapdoodle.embed</groupId>
+      <artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
+      <version>${flapdoodle.version}</version>
     </dependency>
 
   </dependencies>
