--- a/homework-14/pom.xml
+++ b/homework-14/pom.xml
@@ -29,6 +29,7 @@
     </checkstyle.config.url>
     <spring-shell.version>3.2.0</spring-shell.version>
     <flapdoodle.version>4.6.1</flapdoodle.version>
+    <spring-shell.version>3.2.0</spring-shell.version>
   </properties>
 
   <dependencies>
@@ -36,7 +37,7 @@
     <dependency>
       <groupId>org.springframework.shell</groupId>
       <artifactId>spring-shell-starter</artifactId>
-      <version>3.2.0</version>
+      <version>${spring-shell.version}</version>
     </dependency>
 
     <dependency>
