Add user and group in docker file to start not from root

--- a/homework-17/backend/Dockerfile
+++ b/homework-17/backend/Dockerfile
@@ -2,12 +2,13 @@ FROM maven:3.9.6-eclipse-temurin-17-alpine AS build
 
 WORKDIR /app
 COPY ./pom.xml /app/pom.xml
-RUN mvn dependency:go-offline
-
 COPY ./src /app/src
 RUN mvn clean package -DskipTests -Dcheckstyle.skip=true
 
 FROM eclipse-temurin:17-jre-alpine
+
+RUN addgroup -S mygroup && adduser -S -G mygroup myuser
+USER myuser
 
 WORKDIR /app
 COPY --from=build /app/target/backend-*.jar /app/app.jar
