--- a/homework-17/frontend/Dockerfile
+++ b/homework-17/frontend/Dockerfile
@@ -12,6 +12,9 @@ RUN npm run build
 FROM nginx:1.25.4-alpine
 COPY conf/nginx.conf /etc/nginx/conf.d/default.conf
 
+RUN addgroup -S mygroup && adduser -S -G mygroup myuser
+USER myuser
+
 COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80/tcp
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
